--- a/index.html
+++ b/index.html
@@ -1,136 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>DENGUE</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
-      integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/assets/styles.css" />
-  </head>
 
-  <body>
-    <!-- Start of Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#"
-            >Home <span class="sr-only">(current)</span></a
-          >
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-        </div>
-      </div>
-    </nav>
-    <!-- End of Navbar -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>DENGUE</title>
+  <link rel="icon" href="/assets/images/mosquito-favicon-no.png" type="image/png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
+    integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/assets/styles.css" />
+</head>
 
-    <!-- Start of Dengue Description -->
-    <div class="container">
-      <div class="dengue-description">
-        <article>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
-          modi consequuntur! Aliquid corporis eaque totam ab architecto. Veniam,
-          quae enim velit cumque expedita inventore totam aliquam magnam
-          laudantium, accusantium quam! Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. Delectus assumenda laudantium deleniti atque fugiat
-          magnam, corrupti, architecto ipsam similique rerum omnis veritatis
-          exercitationem voluptates, est nobis necessitatibus deserunt odit
-          voluptatem.
-        </article>
+<body>
+  <!-- Start of Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" width="30"
+        height="30"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Symptoms</a>
+        <a class="nav-item nav-link" href="#">Prevention</a>
       </div>
     </div>
-    <!-- End of Dengue Description -->
+  </nav>
+  <!-- End of Navbar -->
 
-    <!-- Start of Select Zone -->
-    <div class="container">
-      <div class="select-zone">
-        <h3>
-          Select to see the dengue clusters in the area
-        </h3>
-        <div class="zonebtns">
-          <button type="button" class="btn btn-primary north-east">
-            North East
-          </button>
+  <!-- Start of Dengue Description -->
+  <div class="container">
+    <div class="dengue-description">
+      <article>
+        Dengue is a viral infection caused by four types of viruses belonging to the
+        Flaviviridae family. The viruses are transmitted through the bite of infected Aedes female mosquitoes that feed
+        both indoors and outdoors during the daytime (from dawn to dusk). Singapore has reported recent Dengue cases.
+        Risk is present year-round with peak transmission during the rainy season, from September to February.
 
-          <button type="button" class="btn btn-success south-east">
-            South East
-          </button>
 
-          <button type="button" class="btn btn-warning central">
-            Central
-          </button>
+      </article>
+    </div>
+  </div>
+  <!-- End of Dengue Description -->
 
-          <button type="button" class="btn btn-info south-west">
-            South West
-          </button>
+  <!-- Start of Select Zone -->
+  <div class="container">
+    <div class="select-zone">
+      <h3>
+        Select to see the dengue clusters in the area
+      </h3>
+      <div class="zonebtns">
+        <button type="button" class="btn btn-primary north-east">
+          North East
+        </button>
 
-          <button type="button" class="btn btn-danger reset-btn">
-            Singapore
-          </button>
+        <button type="button" class="btn btn-success south-east">
+          South East
+        </button>
 
-          <!-- Dengue Card -->
-          <div class="card" style="width: 70%;">
-            <div class="card-body">
-              <h5 class="card-title">North East</h5>
-              <p class="card-text">
-                The North-East Region of Singapore is one of the five regions in
-                the city-state. The region is the most densely populated and has
-                the third highest population among the five, with Hougang being
-                its most populous town as of 2018 and Seletar as the regional
-                centre. Comprising 13,810 hectares, it includes seven planning
-                areas and is largely a residential region with 217,120 homes. As
-                its name implies, it is located in the north-eastern part of
-                Singapore.
-                <a
-                  href="https://www.nea.gov.sg/dengue-zika/dengue/dengue-cases"
-                  target="_blank"
-                  >Read More for the latest Dengue Information</a
-                >
-              </p>
+        <button type="button" class="btn btn-warning central">
+          Central
+        </button>
 
-              <a href="#" class="card-link northeast-clinics">Clinics</a>
-              <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
-              <a href="#" class="card-link northeast-meals">Meal Delivery</a>
-              <a href="#" class="card-link northeast-supermarkets"
-                >Supermarkets</a
-              >
-            </div>
+        <button type="button" class="btn btn-info south-west">
+          South West
+        </button>
+
+        <button type="button" class="btn btn-danger reset-btn">
+          Singapore
+        </button>
+
+        <!-- Dengue Card -->
+        <div class="card" style="width: 70%;">
+          <div class="card-body">
+            <h5 class="card-title">North East</h5>
+            <p class="card-text">
+              The North-East Region of Singapore is one of the five regions in
+              the city-state. The region is the most densely populated and has
+              the third highest population among the five, with Hougang being
+              its most populous town as of 2018 and Seletar as the regional
+              centre. Comprising 13,810 hectares, it includes seven planning
+              areas and is largely a residential region with 217,120 homes. As
+              its name implies, it is located in the north-eastern part of
+              Singapore.
+              <a href="https://www.nea.gov.sg/dengue-zika/dengue/dengue-cases" target="_blank">Read More </a>for the
+              latest
+              Dengue Information
+            </p>
+
+            <a href="#" class="card-link northeast-clinics">Clinics</a>
+            <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
+            <a href="#" class="card-link northeast-meals">Meal Delivery</a>
+            <a href="#" class="card-link northeast-supermarkets">Supermarkets</a>
           </div>
         </div>
       </div>
     </div>
-    <!-- End of Select Zone -->
+  </div>
+  <!-- End of Select Zone -->
 
-    <!-- Google Map -->
-    <div class="container">
-      <div id="map"></div>
-    </div>
+  <!-- Google Map -->
+  <div class="container">
+    <div id="map"></div>
+  </div>
 
-    <!-- Google Map results -->
-    <!-- <div id="listing">
+  <!-- Google Map results -->
+  <!-- <div id="listing">
     <table id="resultsTable">
       <tbody id="results"></tbody>
     </table>
   </div> -->
 
-    <!-- <div style="display: none">
+  <!-- <div style="display: none">
     <div id="info-content">
       <table>
         <tr id="iw-url-row" class="iw_table_row">
@@ -157,37 +141,30 @@
     </div>
   </div> -->
 
-    <!--load jquery first, else console mention $ not define-->
-    <script src="/assets/jquery.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
-      integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P"
-      crossorigin="anonymous"
-    ></script>
+  <!--load jquery first, else console mention $ not define-->
+  <script src="/assets/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
+    integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P"
+    crossorigin="anonymous"></script>
 
-    <!--Google Map API-->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap"
-      async
-      defer
-    ></script>
+  <!--Google Map API-->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap"
+    async defer></script>
 
-    <!--Own js file-->
-    <script src="/assets/app.js"></script>
-    <script src="/assets/Atest.js"></script>
-    <script src="/assets/dengue-clusters.js"></script>
-    <script src="/assets/north/northclinic.js"></script>
-    <script src="/assets/north/northpharmacy.js"></script>
-    <script src="/assets/north/northfood.js"></script>
-  </body>
+  <!--Own js file-->
+  <script src="/assets/app.js"></script>
+  <script src="/assets/Atest.js"></script>
+  <script src="/assets/dengue-clusters.js"></script>
+  <script src="/assets/north/northclinic.js"></script>
+  <script src="/assets/north/northpharmacy.js"></script>
+  <script src="/assets/north/northfood.js"></script>
+</body>
+
 </html>
