added responsiveness to buttons

--- a/index.html
+++ b/index.html
@@ -78,28 +78,38 @@
   <div class="container">
     <div class="select-zone">
       <h3>
-        Select to see the dengue clusters in the area
+        Select to see the dengue clusters
       </h3>
       <div class="zonebtns">
-        <button type="button" class="btn btn-primary north-east">
-          North East
-        </button>
-
-        <button type="button" class="btn btn-success south-east">
-          South East
-        </button>
-
-        <button type="button" class="btn btn-warning central">
-          Central
-        </button>
-
-        <button type="button" class="btn btn-info south-west">
-          South West
-        </button>
-
-        <button type="button" class="btn btn-danger reset-btn">
-          Singapore
-        </button>
+        <div class="row">
+          <div class="col-6 col-md-3">
+            <button type="button" class="btn btn-primary btn-block north-east">
+              North East
+            </button>
+          </div>
+          <div class="col-6 col-md-3">
+            <button type="button" class="btn btn-warning btn-block central">
+              Central
+            </button>
+          </div>
+          <div class="col-6 col-md-3">
+            <button type="button" class="btn btn-success btn-block south-east">
+              South East
+            </button>
+          </div>
+          <div class="col-6 col-md-3">
+            <button type="button" class="btn btn-info btn-block south-west">
+              South West
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <button type="button" class="btn btn-danger btn-block reset-btn">
+              Singapore
+            </button>
+          </div>
+        </div>
 
         <!-- North East Dengue Card -->
         <div class="card northeastcard" style="width: 70%;">
