changed text in card

--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
   <!-- North East Dengue Card -->
   <div class="card northeastcard" style="width: 90%;">
     <div class="card-body">
-      <h5 class="card-title">North East</h5>
+      <h5 class="card-title">Ammenities near you</h5>
       <p class="card-text">
-        <a href="https://www.nea.gov.sg/dengue-zika/dengue/dengue-cases" target="_blank">Read More </a>for the
-        latest
-        Dengue Information
+        Select options to see information on medical supplies and services near you. Read more here for the latest
+        <a href="https://www.nea.gov.sg/dengue-zika/dengue/dengue-cases" target="_blank">dengue updates.</a>
       </p>
 
       <a href="#" class="card-link northeast-clinics">Clinics</a>
