introduced animation for hamburger

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 </head>
 
 <body>
+
   <!-- Start of Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg">
-    <img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" width="30" height="30" class="moz-brand">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <nav class="navbar fixed-top navbar-expand-md" style="background-color: #fde3e3;">
+    <img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" width="40" height="40" class="moz-brand">
+    <a href="#" class="navbar-toggler menu example1" data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"><span></span></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link home" href="#">Home </a>
+        <a class="nav-item nav-link" href="#">Home</a>
         <a class="nav-item nav-link" href="#select-zone">Dengue Clusters</a>
         <a class="nav-item nav-link" href="#">Symptoms</a>
         <a class="nav-item nav-link" href="#">Prevention</a>
@@ -32,10 +31,7 @@
   <!-- End of Navbar -->
 
   <!-- Mozzie Wipeout Image -->
-  <div class="stagnant-water d-md-none">
-    <img src="/assets/images/stagnant-water.jpg" alt="">
-  </div>
-  <div class="mozzie-wipeout d-none d-md-block">
+  <div class="mozzie-wipeout">
     <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="">
   </div>
   <!-- Start of Dengue Description -->
