set height for cards

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Start of Navbar -->
   <nav class="navbar fixed-top navbar-expand-md" style="background-color: #fde3e3;">
-    <img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" width="40" height="40" class="moz-brand">
+    <img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" class="moz-brand">
     <a href="#" class="navbar-toggler menu example1" data-toggle="collapse"
       data-target="#navbarNavAltMarkup"><span></span></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <div class="card dengue-description" style="width: 100%;">
+        <div class="card dengue-description">
           <div class="card-body">
             <h4 class="card-title">About Dengue</h4>
             <p class="card-text">
@@ -50,17 +50,18 @@
         </div>
       </div>
       <div class="col-sm-12 col-md-6">
-        <div class="card dengue-cases" style="width: 100%;">
+        <div class="card dengue-cases">
           <div class="card-body">
             <h4 class="card-title">Dengue cases</h4>
             <p class="card-text">
-              <img src="/assets/images/mosquito1.png" alt="" class="mosq-icon">
-              <div class="number-cases">
+              <span>
+                <img src="/assets/images/mosquito1.png" alt="" class="mosq-icon"></span>
+              <!-- <div class="number-cases"> -->
                 <span class="reported-cases">29</span><br>
                 <span>cases notified</span><br>
                 <span>30 Nov 2019 at</span><br>
                 <span>3pm</span>
-              </div>
+              <!-- </div> -->
             </p>
           </div>
         </div>
