--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <!-- Start of Navbar -->
     <nav
       class="navbar fixed-top navbar-expand-md"
-      style="background-color: #fde3e3;"
     >
       <img
         src="/trent-project-2-dengue/assets/images/mosquito-favicon-no.png"
@@ -209,6 +208,13 @@
       </table>
     </div>
   </div> -->
+
+  <footer class="footer">
+  <p>Linda Hsu, 2019</p>
+  <small>For educational purpose</small>
+  <br>
+  <br>
+</footer>
 
     <!--load jquery first, else console mention $ not define-->
     <script src="/trent-project-2-dengue/assets/jquery.js"></script>
