fixed links which kept going back on top

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     class="mosq-icon"
                 /></span>
 
-                <!-- <div class="number-cases"> -->
+                <!-- <span class="number-cases"> -->
                 <span class="reported-cases">29</span><br />
                 <span>cases notified</span><br />
                 <span>30 Nov 2019 at</span><br />
@@ -168,10 +168,11 @@
           >
         </p>
 
-        <a href="#" class="card-link northeast-clinics">Clinics</a>
-        <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
-        <a href="#" class="card-link northeast-meals">Meal Delivery</a>
-        <a href="#" class="card-link northeast-supermarkets">Supermarkets</a>
+        <a href="#select-zone" class="card-link northeast-clinics">Clinics</a>
+        <a href="#select-zone" class="card-link northeast-pharmacies">Pharmacies</a>
+        <a href="#select-zone" class="card-link northeast-meals">Meal Delivery</a>
+        <a href="#select-zone" class="card-link northeast-test">Meal test</a>
+        <a href="#select-zone" class="card-link northeast-spmkt">Supermarkets</a>
       </div>
     </div>
 
