shifted big image upwards

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   </div>
 
   <!-- North East Dengue Card -->
-  <div class="card northeastcard" style="width: 90%;">
-    <div class="card-body">
+  <div class="card northeastcard">
+    <div class=" card-body">
       <h5 class="card-title">Ammenities near you</h5>
       <p class="card-text">
         Select options to see information on medical supplies and services
