fixed link to supermarket markers

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <!-- Start of Navbar -->
+  <div class="container">
   <nav class="navbar fixed-top navbar-expand-md">
     <img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" class="moz-brand" />
     <a href="#" class="navbar-toggler menu example1" data-toggle="collapse"
@@ -27,12 +28,15 @@
       </div>
     </div>
   </nav>
+</div>
   <!-- End of Navbar -->
 
   <!-- Mozzie Wipeout Image -->
+  <div class="container">
   <div class="mozzie-wipeout">
     <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="" />
   </div>
+</div>
   <!-- Start of Dengue Description -->
   <div class="container">
     <div class="row">
@@ -78,7 +82,9 @@
   </div>
 
   <!-- End of Dengue Description -->
+  <div class="container">
   <div id="givespace"></div>
+</div>
   <!-- Start of Select Zone -->
   <div class="container">
     <div class="select-zone" id="select-zone">
@@ -127,6 +133,7 @@
   </div>
 
   <!-- North East Dengue Card -->
+  <div class="container">
   <div class="card northeastcard">
     <div class=" card-body">
       <h5 class="card-title">Ammenities near you</h5>
@@ -142,7 +149,7 @@
       <a href="#givespace" class="card-link northeast-spmkt">Supermarkets</a>
     </div>
   </div>
-
+</div>
   <!-- Google Map results -->
   <!-- <div id="listing">
     <table id="resultsTable">
